correct some misdirection to allow admin to register and sign in.

--- a/src/SonOfCod/Views/Admin/Register.cshtml
+++ b/src/SonOfCod/Views/Admin/Register.cshtml
@@ -9,7 +9,7 @@
 
 <h2>Register a new admin</h2>
 <hr />
-@using (Html.BeginForm("Register", "Account", FormMethod.Post))
+@using (Html.BeginForm("Register", "Admin", FormMethod.Post))
 {
     <div class="form-group">
         @Html.LabelFor(m => m.Email)
