--- a/src/SonOfCod/Views/Admin/Index.cshtml
+++ b/src/SonOfCod/Views/Admin/Index.cshtml
@@ -1,1 +1,8 @@
 ﻿<h1>Admin Page</h1>
+
+
+<p>Hello @User.Identity.Name!</p>
+@using (Html.BeginForm("LogOff", "Admin"))
+{
+    <input type="submit" class="btn btn-default" value="Log out" />
+}
