add some boiler text to newsletter page.

--- a/src/SonOfCod/Views/Newsletter/Index.cshtml
+++ b/src/SonOfCod/Views/Newsletter/Index.cshtml
@@ -19,6 +19,8 @@
 }
 else
 {
+    <h1>Sign up for our newsletter</h1>
+    <h3>Get notifications of any sales going on at Son of Cod Seafood! We offer lower prices, bigger quantities, and exclusive meats through our newsletter. Emails come about once a week.</h3>
     @using (Html.BeginForm("Subscribe", "Newsletter", FormMethod.Post))
     {
         <div class="form-group">
