add create visitor function in controller.

--- a/src/SonOfCod/Views/Newsletter/Index.cshtml
+++ b/src/SonOfCod/Views/Newsletter/Index.cshtml
@@ -21,7 +21,7 @@ else
 {
     <h1>Sign up for our newsletter</h1>
     <h3>Get notifications of any sales going on at Son of Cod Seafood! We offer lower prices, bigger quantities, and exclusive meats through our newsletter. Emails come about once a week.</h3>
-    @using (Html.BeginForm("Subscribe", "Newsletter", FormMethod.Post))
+    @using (Html.BeginForm("Create", "Newsletter", FormMethod.Post))
     {
         <div class="form-group">
             @Html.Label("Email")
@@ -43,8 +43,9 @@ else
             @Html.DropDownList("Reason", (IEnumerable<SelectListItem>)ViewBag.Reasons, new { @class = "form-control" })
         </div>
 
-        <input type="submit" value="Sign up for mailing list" class="btn btn-primary" />
+        <input type="submit" value="Create" class="btn btn-primary" />
     }
+
 }
 
 
