--- a/src/SonOfCod/Views/Shared/_Layout.cshtml
+++ b/src/SonOfCod/Views/Shared/_Layout.cshtml
@@ -3,10 +3,21 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <title>@ViewBag.Title</title>
 </head>
 <body>
-    <div>
+    <nav class="navbar navbar-default">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/home/index">Home</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li><a href="/admin/index">Admin<span class="sr-only">(current)</span></a></li>
+            <li><a href="/newsletter/index">Newsletter</a></li>
+            <li><a href="/marketing/index">Landing/Marketing</a></li>
+        </ul>
+    </nav>
+    <div class="container">
         @RenderBody()
     </div>
 </body>
