start to seperate marketing page into admin vs not.

--- a/src/SonOfCod/Views/Admin/Index.cshtml
+++ b/src/SonOfCod/Views/Admin/Index.cshtml
@@ -1,4 +1,9 @@
-﻿<h1>Admin Page</h1>
+﻿@{
+    ViewData["Title"] = "Son Of Cod - Subscribe to Newsletter";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<h1>Admin Page</h1>
 
 
 <p>Hello @User.Identity.Name!</p>
