--- a/src/SonOfCod/Views/Marketing/Index.cshtml
+++ b/src/SonOfCod/Views/Marketing/Index.cshtml
@@ -8,7 +8,51 @@
 @if (User.Identity.IsAuthenticated)
 {
     <p>Hello @User.Identity.Name!</p>
-    
+
+    <h2>Edit</h2>
+    <hr />
+    @using (Html.BeginForm("Edit", "Marketing", FormMethod.Post))
+    {
+        @Html.HiddenFor(model => model.ContentId)
+        @Html.HiddenFor(model => model.Page)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Title)
+            @Html.TextBoxFor(model => model.Title, new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Tagline)
+            @Html.TextBoxFor(model => model.Tagline, new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Introduction)
+            @Html.TextAreaFor(model => model.Introduction, new { @class = "form-control" })
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ImageLink)
+            @Html.TextBoxFor(model => model.ImageLink, new { @class = "form-control" })
+        </div>
+
+        <input type="submit" value="Save Changes" class="btn btn-primary" />
+    }
+
+    <img class="marketing-image" src="@Html.DisplayFor(Model => Model.ImageLink)" />
+
+    <h1 class="title">@Html.DisplayFor(Model => Model.Title)</h1>
+
+    <div class="row">
+        <div class="col-xs-3"></div>
+        <div class="col-xs-8 content">
+            <p class="tagline">@Html.DisplayFor(Model => Model.Tagline)</p>
+
+            <p class="introduction">@Html.DisplayFor(Model => Model.Introduction)</p>
+        </div>
+        <div class="col-xs-1"></div>
+    </div>
+
 }
 else
 {
